Add some comments to the code. Remove logs.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   </head>
   <body>
     <div class='game-container'>
-      <div class='game-board'>
-      </div>
+      <div class='game-board'></div>
       <div class='game-controls'>
         <input id='up' type='button' value='Up'>
         <input id='right' type='button' value='>'>
